Finish calculator project

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <div class="calculator">
         <div class="field"></div>
         <div class="rows">
-            <div class="row">
+            <div class="row" style="justify-content: flex-end;">
+                <!-- 
                 <div class="button operator">(</div>
                 <div class="button operator">)</div>
                 <div class="button operator">%</div>
-                <div class="button operator">CE</div>
+                -->
+                <div class="button clear">CE</div>
             </div>
             <div class="row">
                 <div class="button digit">7</div>
